--- a/beanhub/src/main/resources/messages_en.properties
+++ b/beanhub/src/main/resources/messages_en.properties
@@ -33,7 +33,7 @@ customer.main.disconnect_button = Disconnect
 customer.main.topup_header = Top up your credit
 customer.main.topup_label = Amount (€)
 customer.main.topup_button = Pay and Top Up
-customer.main.connect_placeholder = e.g D-123
+customer.main.connect_placehoder = e.g D-123
 customer.main.topup_placeholder = 10.00
 
 # --- Distributor Screen ---
