--- a/beanhub/src/main/resources/messages_it.properties
+++ b/beanhub/src/main/resources/messages_it.properties
@@ -23,7 +23,7 @@ customer.signup.login_action=Accedi
 
 # --- Customer: Main ---
 customer.main.title=Area Cliente
-customer.main.welcome=Ciao, Maria Bianchi (Fittizio)
+customer.main.welcome=Ciao, Alessio Alduina
 customer.main.credit=Credito: € 5.00
 customer.main.logout=Logout
 customer.main.connect_header=Connettiti a un distributore
