--- a/beanhub/src/main/resources/messages.properties
+++ b/beanhub/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 #--Global--
-lang.it =  🇮🇹 IT
-lang.en  = 🇬🇧 EN
+lang.it =  IT
+lang.en  =  EN
 
 #--Customer: Login ---
 customer.login.title = Customer Login
