--- a/beanhub/src/main/resources/messages_it.properties
+++ b/beanhub/src/main/resources/messages_it.properties
@@ -1,17 +1,17 @@
-# --- Global ---
-lang.it = IT
-lang.en =  EN
+# -- Global --
+lang.it=IT
+lang.en=EN
 
-# --- Customer: Login ---
+# -- Customer: Login --
 customer.login.title=Accesso Cliente
 customer.login.header=Accesso Cliente
 customer.login.email=Email
 customer.login.password=Password
 customer.login.button=Accedi
 customer.login.signup_prompt=Non hai un account?
-customer.login.signup_action= Registrati 
+customer.login.signup_action=Registrati 
 
-# --- Customer: Signup ---
+# -- Customer: Signup --
 customer.signup.title=Registrazione Cliente
 customer.signup.header=Registra un nuovo account
 customer.signup.name=Nome
@@ -21,10 +21,10 @@ customer.signup.button=Registrati
 customer.signup.login_prompt=Hai già un account?
 customer.signup.login_action=Accedi
 
-# --- Customer: Main ---
+# -- Customer: Main --
 customer.main.title=Area Cliente
-customer.main.welcome=Ciao, Alessio Alduina
-customer.main.credit=Credito: € 5.00
+customer.main.welcome=Ciao!
+customer.main.credit=Credito:
 customer.main.logout=Logout
 customer.main.connect_header=Connettiti a un distributore
 customer.main.connect_label=ID Distributore
@@ -36,10 +36,10 @@ customer.main.topup_button=Paga e Ricarica
 customer.main.connect_placeholder=Es. D-123
 customer.main.topup_placeholder=10.00
 
-# --- Distributor Screen ---
+# -- Distributor Screen --
 distributor.title=Distributore Caffè
-distributor.user=Utente: Mario Rossi (Fittizio)
-distributor.credit=Credito: € 2.50
+distributor.user=Utente: 
+distributor.credit=Credito:
 distributor.drink.coffee=Caffè Espresso
 distributor.drink.long_coffee=Caffè Lungo
 distributor.drink.cappuccino=Cappuccino
@@ -50,55 +50,55 @@ distributor.sugar.label=Zucchero:
 distributor.sugar.value=Medio
 distributor.button.buy=Eroga Bevanda
 
-# --- Attendant: Login ---
+# -- Attendant: Login --
 attendant.login.title=Login Addetto
 attendant.login.header=Login Addetto Manutenzione
 attendant.login.id=ID Addetto
 attendant.login.password=Password
 attendant.login.button=Accedi
 
-# --- Attendant: Main ---
+# -- Attendant: Main --
 attendant.main.title=Pannello Addetto
 attendant.main.header=Controllo Stato Distributore
 attendant.main.label=Inserisci ID Distributore
 attendant.main.button=Carica Stato
 attendant.main.logout=Logout
-attendant.main.status_header=Stato Distributore D-456 (Dati Fittizi)
+attendant.main.status_header=Stato Distributore
 attendant.main.status.coffee=Livello Caffè:
 attendant.main.status.cups=Livello Bicchieri:
 attendant.main.status.sugar=Livello Zucchero:
 attendant.main.status.faults=Guasti:
-attendant.main.status.faults_value=Blocco moneta (E-05)
-attendant.main.placeholder=Es. D-456
+attendant.main.placeholder=Es. D-123
 
-# --- Manager: Login ---
+# -- Manager: Login --
 manager.login.title=Login Gestore
 manager.login.header=Login Gestore Sistema
 manager.login.username=Nome Utente
 manager.login.password=Password
 manager.login.button=Accedi
 
-# --- Manager: Shared Menu ---
+# -- Manager: Shared Menu --
 manager.menu.header=Gestione
 manager.menu.dashboard=Dashboard
 manager.menu.machines=Gestione Macchine
 manager.menu.attendants=Gestione Addetti
 manager.menu.logout=Logout
 
-# --- Manager: Dashboard ---
+# -- Manager: Dashboard --
 manager.dashboard.title=Dashboard Gestore
 manager.dashboard.welcome_header=Benvenuto Gestore!
 manager.dashboard.welcome_text=Seleziona una voce dal menu a sinistra per iniziare.
 
-# --- Manager: Machines ---
+# -- Manager: Machines --
 manager.machines.title=Gestione Macchine
 manager.machines.add_header=Aggiungi Nuovo Distributore
 manager.machines.add_id_label=ID Distributore
 manager.machines.add_pos_label=Posizione
 manager.machines.add_button=Aggiungi Macchina
-manager.machines.add_id_placeholder=Es. D-123
-manager.machines.add_pos_placeholder=Es. Edificio 6, Piano 3
 manager.machines.list_header=Stato e Gestione Distributori
+manager.machines.search_label=Cerca Distributore:
+manager.machines.search_placeholder=Filtra per ID o Posizione...
+
 manager.table.id=ID
 manager.table.position=Posizione
 manager.table.status=Stato
@@ -112,7 +112,7 @@ manager.action.turnoff=Disattiva
 manager.action.remove=Rimuovi
 manager.action.activate=Attiva
 
-# --- Manager: Attendants ---
+# -- Manager: Attendants --
 manager.attendants.title=Gestione Addetti
 manager.attendants.add_header=Aggiungi Nuovo Addetto
 manager.attendants.add_name=Nome
