--- a/beanhub/src/main/resources/messages_en.properties
+++ b/beanhub/src/main/resources/messages_en.properties
@@ -1,45 +1,46 @@
-#--Global--
-lang.it = IT
-lang.en  =  EN
+# -- Global --
+lang.it=IT
+lang.en=EN
 
-#--Customer: Login ---
-customer.login.title = Customer Login
-customer.login.header = Customer Login
-customer.login.email = Email
-customer.login.password = Password
-customer.login.button = Login
-customer.login.signup_prompt = Don't have an account?
-customer.login.signup_action = Sign Up
+# -- Customer: Login --
+customer.login.title=Customer Login
+customer.login.header=Customer Login
+customer.login.email=Email
+customer.login.password=Password
+customer.login.button=Login
+customer.login.signup_prompt=Don't have an account?
+customer.login.signup_action=Sign Up
 
-#---Customer: Signup ---
-customer.signup.title = Customer Signup
-customer.signup.header = Sign up a new account
-customer.signup.name = Name
-customer.signup.email = Email
-customer.signup.password = Password
-customer.signup.button = Sign Up
+# -- Customer: Signup --
+customer.signup.title=Customer Signup
+customer.signup.header=Sign up a new account
+customer.signup.name=Name
+customer.signup.email=Email
+customer.signup.password=Password
+customer.signup.button=Sign Up
 customer.signup.login_prompt=You already have an account?
 customer.signup.login_action=Login
 
-#--Customer: Main ---
-customer.main.title = Customer Area
-customer.main.welcome = Hi! Alessio Alduina
-customer.main.credit = Credit: € 5.00
-customer.main.logout = Logout
-customer.main.connect_header = Connect to a distributor
-customer.main.connect_label = Distributor ID
-customer.main.connect_button = Connect
-customer.main.disconnect_button = Disconnect
-customer.main.topup_header = Top up your credit
-customer.main.topup_label = Amount (€)
-customer.main.topup_button = Pay and Top Up
-customer.main.connect_placehoder = e.g D-123
-customer.main.topup_placeholder = 10.00
+# -- Customer: Main --
+customer.main.title=Customer Area
+customer.main.welcome=Hi! 
+customer.main.credit=Credit:
+customer.main.logout=Logout
+customer.main.connect_header=Connect to a distributor
+customer.main.connect_label=Distributor ID
+customer.main.connect_button=Connect
+customer.main.disconnect_button=Disconnect
+customer.main.topup_header=Top up your credit
+customer.main.topup_label=Amount (€)
+customer.main.topup_button=Pay and Top Up
+# Corretto typo: placeholder invece di placehoder
+customer.main.connect_placeholder=e.g. D-123
+customer.main.topup_placeholder=10.00
 
-# --- Distributor Screen ---
+# -- Distributor Screen --
 distributor.title=Coffee Distributor
-distributor.user=User: Mario Rossi (Mock)
-distributor.credit=Credit: € 2.50
+distributor.user=User:
+distributor.credit=Credit:
 distributor.drink.coffee=Espresso Coffee
 distributor.drink.long_coffee=Long Coffee
 distributor.drink.cappuccino=Cappuccino
@@ -50,69 +51,76 @@ distributor.sugar.label=Sugar:
 distributor.sugar.value=Medium
 distributor.button.buy=Dispense Beverage
 
-# --- Attendant: Login ---
+# -- Attendant: Login --
 attendant.login.title=Attendant Login
 attendant.login.header=Maintenance Attendant Login
 attendant.login.id=Attendant ID
 attendant.login.password=Password
 attendant.login.button=Login
 
-# --- Attendant: Main ---
+# -- Attendant: Main --
 attendant.main.title=Attendant Panel
 attendant.main.header=Check Distributor Status
 attendant.main.label=Enter Distributor ID
 attendant.main.button=Load Status
 attendant.main.logout=Logout
-attendant.main.status_header=Status Distributor D-456 (Mock Data)
+# Modificato: Tolti dati hardcoded
+attendant.main.status_header=Distributor Status
 attendant.main.status.coffee=Coffee Level:
 attendant.main.status.cups=Cups Level:
 attendant.main.status.sugar=Sugar Level:
 attendant.main.status.faults=Faults:
-attendant.main.status.faults_value=Coin jam (E-05)
-attendant.main.placeholder=e.g. D-456
+attendant.main.placeholder=e.g. D-123
 
-# --- Manager: Login ---
+# -- Manager: Login --
 manager.login.title=Manager Login
 manager.login.header=System Manager Login
 manager.login.username=Username
 manager.login.password=Password
 manager.login.button=Login
 
-# --- Manager: Shared Menu ---
+# -- Manager: Shared Menu --
 manager.menu.header=Management
 manager.menu.dashboard=Dashboard
 manager.menu.machines=Machines Management
 manager.menu.attendants=Attendants Management
 manager.menu.logout=Logout
 
-# --- Manager: Dashboard ---
+# -- Manager: Dashboard --
 manager.dashboard.title=Manager Dashboard
 manager.dashboard.welcome_header=Welcome Manager!
 manager.dashboard.welcome_text=Select an item from the menu on the left to get started.
 
-# --- Manager: Machines ---
+# -- Manager: Machines --
 manager.machines.title=Machines Management
 manager.machines.add_header=Add new Distributor
 manager.machines.add_id_label=Distributor ID
 manager.machines.add_pos_label=Position
 manager.machines.add_button=Add machine
-manager.machines.add_id_placeholder=e.g. D-123
-manager.machines.add_pos_placeholder=e.g. Building 6, Floor 3
 manager.machines.list_header=Distributor Status and Management
+# NUOVI: Per la barra di ricerca (Assignment 2)
+manager.machines.search_label=Search Distributor:
+manager.machines.search_placeholder=Filter by ID or Position...
+
+# Table headers
 manager.table.id=ID
 manager.table.position=Position
 manager.table.status=Status
 manager.table.faults=Faults
 manager.table.actions=Actions
+
+
 manager.status.active=Active
 manager.status.maintenance=Maintenance
 manager.status.offline=Offline
 manager.faults.none=None
+
+# Action buttons
 manager.action.turnoff=Turn-off
 manager.action.remove=Remove
 manager.action.activate=Activate
 
-# --- Manager: Attendants ---
+# -- Manager: Attendants --
 manager.attendants.title=Attendants Management
 manager.attendants.add_header=Add New Attendant
 manager.attendants.add_name=Name
